<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="140dp"
                    android:layout_height="61dp"
                    android:background="@drawable/style_button_back"
                    android:layout_marginRight="10dp"
                    android:text="@string/button_back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/text_word2"
                    android:layout_width="140dp"
                    android:layout_height="61dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="26sp"/>

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="140dp"
                    android:layout_height="61dp"
                    android:background="@drawable/style_button_back"
                    android:layout_marginRight="10dp"
                    android:text="Next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="26sp" >

                </Button>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"/>

        <ImageView
            android:id="@+id/word1"
            android:layout_width="356dp"
            android:layout_height="241dp"
            android:paddingTop="10dp"
            android:background="@drawable/style_img"
            android:src="@drawable/word1" />

        <TextView
            android:id="@+id/task_word2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/task_word1"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_button_level1"
                    android:text="@string/word1_variant1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_button_level1"
                    android:text="@string/word1_variant2"
                    android:textAllCaps="false"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/variant3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_button_level1"
                    android:text="@string/word1_variant3"
                    android:textAllCaps="false"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textSize="34sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>