<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/levels_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/levels_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button

                    android:id="@+id/buttonBack"
                    android:layout_width="140dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_button_back"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/button_back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"

                android:layout_height="299dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="432dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButtonLevel1"
                        android:layout_width="213dp"
                        android:layout_height="199dp"
                        android:layout_weight="1"
                        android:background="@drawable/style_btn_default"
                        android:src="@drawable/game_levels" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonTask"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/style_button_level1"
                                android:layout_marginRight="5dp"
                                android:text="@string/button_task"
                                android:textColor="@color/white"
                                android:textAllCaps="false"
                                android:textSize="22dp"/>

                            <Button
                                android:id="@+id/buttonWordList"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:background="@drawable/style_button_level1"
                                android:text="@string/button_wordList"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="22dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonTheory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/style_button_level1"
                                android:text="@string/button_theory"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="22dp" />
                        </LinearLayout>

                    </LinearLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>